# renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  ObjReader.cpp  ObjReader.h  Renderer.cpp  Renderer.h  Vertex.h  main.cpp
tga/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  tgaimage.cpp  tgaimage.h
